--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ header {
 
 /* HERO */
 .hero {
-  background-image: url(/img/funkos-banner.webp);
+  background-image: url(../img/funkos-banner.webp);
   padding: var(--spacing-128);
   background-size: cover;
   background-attachment: fixed;
