--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,32 @@ header {
   padding: var(--spacing-36);
 }
 
+.head {
+  display: flex;
+  align-items: center;
+  gap: 50px;
+}
+
+.error404 {
+  font-size: var(--font-jumbo);
+  text-align: center;
+}
+
+.container404 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  flex: 1 1 600px;
+  margin-top: var(--spacing-128);
+  margin-bottom: var(--spacing-128);
+}
+
+.error {
+  font-size: 100px;
+}
+
 .navbar {
   display: flex;
   justify-content: space-between;
